feat(auth): integrated auth API to the frontend
- accept invite
- login
- register
- onboarding
- verify email
